--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,17 @@ body {
   color: white;
 }
 
+.input {
+  grid-column: 1/ -1;
+  text-align: right;
+  font-size: 64px;
+  width: 100%;
+  padding-right: 2px;
+  color: white;
+  border: none;
+  overflow: hidden;
+}
+
 .btn {
   display: grid;
   place-content: center;
